public/css/styles.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.flow > * + * {
    margin-top: var(--flow-space, 1em);
  }
  
body {
  overflow-x: hidden;
  position: relative;
}

  label .menu {
    position: absolute;
    right: 6px;
    top: 12px;
    z-index: 100;
    width: 42px;
    height: 42px;
    background: #fff;
    border-radius: 50% 50% 50% 50%;
    -webkit-transition: .5s ease-in-out;
    transition: .5s ease-in-out;
    box-shadow: 0 0 0 0 #FFF, 0 0 0 0 #FFF;
    cursor: pointer;
  }
  
  label .hamburger {
    position: absolute;
    top: 12px;
    right: 12px;
    width: 30px;
    height: 2px;
    background: #000;
    display: block;
    -webkit-transform-origin: center;
    transform-origin: center;
    -webkit-transition: .5s ease-in-out;
    transition: .5s ease-in-out;
  }
  
  label .hamburger:after, label .hamburger:before {
    -webkit-transition: .5s ease-in-out;
    transition: .5s ease-in-out;
    content: "";
    position: absolute;
    display: block;
    width: 100%;
    height: 100%;
    background: #000;
  }
  
  label .hamburger:before { top: -10px; }
  
  label .hamburger:after { bottom: -10px; }
  
  label input { display: none; }


  label input:checked + .menu {
    box-shadow: 0 0 0 100vw #FFF, 0 0 0 100vh #FFF;
    width: 100vw;
    height:100vw;
    border-radius: 0;
  }
  
  label input:checked + .menu .hamburger {
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
  }
  
  label input:checked + .menu .hamburger:after {
    -webkit-transform: rotate(90deg);
    transform: rotate(90deg);
    bottom: 0;
  }
  
  label input:checked + .menu .hamburger:before {
    -webkit-transform: rotate(90deg);
    transform: rotate(90deg);
    top: 0;
  }
  
  label input:checked + .menu + ul { opacity: 1; left:50%; }
  
  label ul {
    left: 200%;
    z-index: 200;
    position: absolute;
    top: 25vh;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    opacity: 0;
    -webkit-transition: .25s 0s ease-in-out;
    transition: .25s 0s ease-in-out;
  }
  
  label a {
    margin-bottom: 1em;
    display: block;
    color: #000;
    text-decoration: none;
  }

